Fix query header on smaller screens

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -528,6 +528,13 @@ nav .rg-bottom {
     }
   }
 
+  .query-page-wrapper {
+    .container {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
   .query-fullscreen .query-metadata__mobile {
     display: block;
     border-bottom: 1px solid #efefef;
